[package]
name = "ssrust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.6.0"
clap = { version = "4.5.3", features = ["derive"] }
md5 = "0.7.0"
rand = { version = "0.8.5", features = ["std"] }
ring = { version = "0.17", features = ["std"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
