[package]
name = "ssrust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "io-util",
    "net",
    "time",
    "rt",
    "macros",
    "signal",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.10"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
ring = { version = "0.17", features = ["std"] }
rand = { version = "0.9", features = ["thread_rng"] }
md5 = "0.7.0"
